--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,28 @@
 {
-    "presets": [
-        ["@babel/preset-env",{
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
         "targets": [
-            "last 2 versions",
-            "not dead",
-            "not < 2%"
-           // "not ie 11"
+          "last 2 versions",
+          "not dead",
+          "not < 2%"
+          // "not ie 11"
         ],
         "useBuiltIns": "entry",
         "corejs": "2.6.10"
-    }], "@babel/preset-react"],
-    "plugins": ["react-hot-loader/babel", "@babel/plugin-syntax-dynamic-import"],
-    "env": {
-        "test": {
-            "plugins": ["dynamic-import-node"]
-        }
+      }
+    ],
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "react-hot-loader/babel",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-class-properties"
+  ],
+  "env": {
+    "test": {
+      "plugins": ["dynamic-import-node"]
     }
+  }
 }
